--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -2786,7 +2786,7 @@
                     $('.c-loading').loading('hide')
                 },
             });
-            
+
 
             $.ajax({
                 url: `@FundRuleTextApiUrl`,
@@ -2869,6 +2869,19 @@
             if (!jQuery) {
                 return;
             }
+            let prevVal;
+            function CheckSameYear(d1, d2) {
+                let d1Year = new Date(d1).getFullYear();
+                let d2Year = new Date(d2).getFullYear();
+                return d1Year == d2Year
+            }
+            function CheckSameYearAndMonth(d1, d2) {
+                let d1Year = new Date(d1).getFullYear();
+                let d2Year = new Date(d2).getFullYear();
+                let d1Month = new Date(d1).getMonth() + 1;
+                let d2Month = new Date(d2).getMonth() + 1;
+                return d1Year == d2Year && d1Month == d2Month
+            }
             var nearlySetting = {
                 chart: {
                     zooming: {
@@ -2929,32 +2942,8 @@
                             }
                         }
                     }
-                },
-                xAxis: {
-                    type: 'datetime',
-                    tickPosition: 'inside',
-                    tickWidth: 0.5,
-                    tickLength: 7,
-                    labels: {
-                        formatter: function () {
-                            const format = {
-                                day: '%Y/%m',
-                                week: '%Y/%m',
-                                month: '%Y/%m'
-                            }[this.tickPositionInfo.unitName];
-                            return Highcharts.dateFormat(format, this.value);
-                        },
-                        style: {
-                            color: '#6e6e6e'
-                        }
-                    },
-                    crosshair: {
-                        width: 1,
-                        color: '#c3c3c3'
-                    },
-                    lineColor: '#ebebeb',
-                    tickColor: '#ebebeb'
                 }
+
             };
             var chart = Highcharts.stockChart('performanceChart', {
                 ...nearlySetting,
@@ -3035,6 +3024,38 @@
                                 mapData.reverse();
                                 Highcharts.stockChart('performanceChart', {
                                     ...nearlySetting,
+                                        xAxis: {
+                                            type: 'datetime',
+                                            tickPosition: 'inside',
+                                            tickWidth: 0.5,
+                                            tickLength: 7,
+                                            tickInterva: (24 * 3600 *1000) *7,
+                                            labels: {
+                                                formatter: function () {
+                                                    let format = CheckSameYear(this.axis.min, this.axis.max) ? '%m/%d' : '%Y/%m';
+                                                    let output = null;
+                                                    if (!this.isFirst && format == '%Y/%m') {
+                                                        if (!CheckSameYearAndMonth(prevVal, this.value)) {
+                                                            output = Highcharts.dateFormat(format, this.value);
+                                                        }
+                                                        prevVal = this.value;
+                                                    } else {
+                                                        output = Highcharts.dateFormat(format, this.value);
+                                                        prevVal = this.value;
+                                                    }
+                                                    return output;
+                                                },
+                                                style: {
+                                                    color: '#6e6e6e'
+                                                }
+                                            },
+                                            crosshair: {
+                                                width: 1,
+                                                color: '#c3c3c3'
+                                            },
+                                            lineColor: '#ebebeb',
+                                            tickColor: '#ebebeb'
+                                        },
                                     tooltip: {
                                         split: false,
                                         useHTML: true,
@@ -3117,6 +3138,38 @@
                         // $('[data-update-date="netWorth"]').text(updateDate);
                         Highcharts.stockChart('netWorthChart', {
                             ...nearlySetting,
+                             xAxis: {
+                    type: 'datetime',
+                    tickPosition: 'inside',
+                    tickWidth: 0.5,
+                    tickLength: 7,
+                    tickInterva: (24 * 3600 *1000) *7,
+                                 labels: {
+                                     formatter: function () {
+                                         let format = CheckSameYear(this.axis.min, this.axis.max) ? '%m/%d' : '%Y/%m';
+                                         let output = null;
+                                         if (!this.isFirst && format == '%Y/%m') {
+                                             if (!CheckSameYearAndMonth(prevVal, this.value)) {
+                                                 output = Highcharts.dateFormat(format, this.value);
+                                             }
+                                             prevVal = this.value;
+                                         } else {
+                                             output = Highcharts.dateFormat(format, this.value);
+                                             prevVal = this.value;
+                                         }
+                                         return output;
+                                     },
+                                     style: {
+                                         color: '#6e6e6e'
+                                     }
+                                 },
+                                crosshair: {
+                                    width: 1,
+                                    color: '#c3c3c3'
+                                },
+                                lineColor: '#ebebeb',
+                                tickColor: '#ebebeb'
+                            },
                             tooltip: {
                                 split: false,
                                 useHTML: true,
@@ -3310,6 +3363,19 @@
             function roundToTwo(num) {
                 return +(Math.round(num + 'e+2') + 'e-2');
             }
+            function CheckSameYear(d1, d2) {
+                let d1Year = new Date(d1).getFullYear();
+                let d2Year = new Date(d2).getFullYear();
+                return d1Year == d2Year
+            }
+            function CheckSameYearAndMonth(d1, d2) {
+                let d1Year = new Date(d1).getFullYear();
+                let d2Year = new Date(d2).getFullYear();
+                let d1Month = new Date(d1).getMonth() + 1;
+                let d2Month = new Date(d2).getMonth() + 1;
+                return d1Year == d2Year && d1Month == d2Month
+            }
+            let preVal;
             async function initTrendChart(obj, text) {
                 try {
                     /*
@@ -3428,15 +3494,21 @@
                                     tickPosition: 'inside',
                                     tickWidth: 0.5,
                                     tickLength: 7,
+                                    tickInterval: (24 * 3600 * 1000) * 7,
                                     labels: {
                                         formatter: function () {
-                                            const format = {
-                                                day: '%Y/%m',
-                                                week: '%Y/%m',
-                                                month: '%Y/%m',
-                                                year: '%Y/%m'
-                                            }[this.tickPositionInfo.unitName];
-                                            return Highcharts.dateFormat(format, this.value);
+                                            let format = CheckSameYear(obj.startdate, obj.enddate) ? '%m/%d' : '%Y/%m';
+                                            let output = null;
+                                            if (!this.isFirst && format == '%Y/%m') {
+                                                if (!CheckSameYearAndMonth(prevVal, this.value)) {
+                                                    output = Highcharts.dateFormat(format, this.value);
+                                                }
+                                                prevVal = this.value;
+                                            } else {
+                                                output = Highcharts.dateFormat(format, this.value);
+                                                prevVal = this.value;
+                                            }
+                                            return output;
                                         },
                                         style: {
                                             color: '#6e6e6e'
