--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -101,13 +101,13 @@
         <div class="c-modal__action">
             <div class="l-action l-action--inline">
                 <div class="l-action__item">
-                    <a href="#" class="o-btn o-btn--primary o-btn--sm" id="subscriptionSingle" data-type="Single">單筆申購</a>
+                    <a href="#" class="o-btn o-btn--primary o-btn--sm" id="subscriptionSingle" target="_blank" data-type="Single">單筆申購</a>
                 </div>
                 <div class="l-action__item">
-                    <a href="#" class="o-btn o-btn--primary o-btn--sm" id="subscriptionRegular" data-type="Regular">定期定額</a>
+                    <a href="#" class="o-btn o-btn--primary o-btn--sm" id="subscriptionRegular" target="_blank" data-type="Regular">定期定額</a>
                 </div>
                 <div class="l-action__item">
-                    <a href="#" class="o-btn o-btn--primary o-btn--sm" id="subscriptionGo" data-type="Regular">前往</a>
+                    <a href="#" class="o-btn o-btn--primary o-btn--sm" id="subscriptionGo" target="_blank" data-type="Regular">前往</a>
                 </div>
             </div>
         </div>
