Update : ProductTypeEnum 的 國外股票，USStock 更改成 ForeignStock、Table 添加 UpdateTime 欄位、修復由首頁的全站搜尋搜完後會儲存兩次的情況

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
@@ -124,7 +124,7 @@
                 insertKeywords();
 
                 let option = SC_DATA.KeywordSearch_Option;
-                redirect(option.data('advance-url') + '?keyword=' + DOMPurify.sanitize(input.value));
+                redirect(option.data('advance-url') + '?keyword=' + DOMPurify.sanitize(input.value) + '&keywordFromSearchbar=true');
             }
 
             function redirect(url) {
