--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -92,7 +92,7 @@
             let self = $("input[insertKeywords]");
             let isSeachBar = self.attr("issearchbar");
             let urlParams = new URLSearchParams(window.location.search);
-            let keywordFromSearchbar = DOMPurify.sanitize(urlParams.get('keywordFromSearchbar'));
+            let keyword = DOMPurify.sanitize(urlParams.get('keyword'));
             let params;
 
             if (isSeachBar == "true") {
@@ -103,7 +103,7 @@
                 };
             }
             else {
-                if (keywordFromSearchbar == 'true' && isKeywordFromSearchbar) {
+                if (keyword != undefined && isKeywordFromSearchbar) {
                     isKeywordFromSearchbar = false;
                     return;
                 }
