--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -545,7 +545,7 @@
             let focusId = e.target.getAttribute('eh-focus-id');
             if (focusStore.length > 0 && focusId != '') {
                 let idx = focusStore.findIndex((x) => x.id == focusId);
-                if (idx >= 0) {
+                if (idx >= 0 && focusStore[idx].trackDate != null) {
                     e.target.innerText = focusStore[idx].trackDate + "加入關注";
                 }
             }
